# mergepipe

./: .gitignore  .ruff.toml  README.md  example_generate.py  example_usage_explain_lineage.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: merge_fast_io_budget.sh
src/mergepipe/analyzer/: indexer.py
src/mergepipe/catalog/: db.py  manifest.py
src/mergepipe/cli/: app.py  explain.py
src/mergepipe/engine/: merge_engine.py  naive_io_only.py  naive_merge.py  ties_merging_utils.py  utils.py
src/mergepipe/planner/: planner.py
src/mergepipe/storage/: io.py  transaction.py
tests/: test_minimal.py  test_smoke.py
